# pydatev

./: CHANGELOG.md  File-handling.md  README.md  setup.cfg
src/pydatev/: belegarchiv.py  pydatev.py
tests/: test_belegarchiv.py  test_module_isolation.py  test_text_roundtrip.py
